--- a/index.html
+++ b/index.html
@@ -318,23 +318,29 @@
         const voteComments = document.getElementById('voteComments');
 
         // 初始化頁面
-        window.onload = function() {
-            // 顯示載入動畫1秒
-            setTimeout(() => {
-                loader.style.display = 'none';
-                initializePage();
-            }, 1000);
+        window.onload = async function() {
+            try {
+                // 從後端加載數據
+                await Promise.all([
+                    loadVoteData(),
+                    loadComments()
+                ]);
 
-            // 從localStorage加載數據
-            loadFromLocalStorage();
+                // 顯示載入動畫1秒
+                setTimeout(() => {
+                    loader.style.display = 'none';
+                    initializePage();
+                }, 1000);
+            } catch (error) {
+                console.error('初始化失敗:', error);
+                loader.style.display = 'none';
+            }
         };
 
         // 初始化頁面內容
         function initializePage() {
             renderTimeline();
             renderAnalysis();
-            updateVoteDisplay();
-            renderVoteComments();
         }
 
         // 顯示提交真相表單
@@ -394,33 +400,49 @@
         }
 
         // 支持投票相關變數
-        let hasVoted = localStorage.getItem('hasVoted') === 'true';
-        let supportData = JSON.parse(localStorage.getItem('supportData')) || {
-            andy: 0,
-            jianing: 0
-        };
+        let hasVoted = false;
+        let supportData = { Andy: 0, '家寧': 0 };
+
+        // 從後端加載投票數據
+        async function loadVoteData() {
+            try {
+                const response = await fetch('/api/vote');
+                const data = await response.json();
+                supportData = data.votes;
+                updateVoteDisplay();
+            } catch (error) {
+                console.error('加載投票數據失敗:', error);
+            }
+        }
 
         // 支持按鈕點擊處理
-        function support(person) {
+        async function support(person) {
             if (hasVoted) return;
 
-            supportData[person]++;
-            hasVoted = true;
-            localStorage.setItem('hasVoted', 'true');
-            localStorage.setItem('supportData', JSON.stringify(supportData));
+            try {
+                const response = await fetch('/api/vote', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ candidate: person === 'andy' ? 'Andy' : '家寧' })
+                });
 
-            // 顯示投票原因輸入
-            voteReason.style.display = 'block';
-            localStorage.setItem('votedPerson', person);
-
-            updateVoteDisplay();
+                if (response.ok) {
+                    hasVoted = true;
+                    voteReason.style.display = 'block';
+                    voteReason.dataset.votedPerson = person;
+                    await loadVoteData();
+                }
+            } catch (error) {
+                console.error('投票失敗:', error);
+                alert('投票失敗，請稍後再試');
+            }
         }
 
         // 更新投票顯示
         function updateVoteDisplay() {
-            const total = supportData.andy + supportData.jianing;
-            const andyPercent = total ? Math.round(supportData.andy / total * 100) : 0;
-            const jianingPercent = total ? Math.round(supportData.jianing / total * 100) : 0;
+            const total = supportData.Andy + supportData['家寧'];
+            const andyPercent = total ? Math.round(supportData.Andy / total * 100) : 0;
+            const jianingPercent = total ? Math.round(supportData['家寧'] / total * 100) : 0;
 
             document.getElementById('andyProgress').style.width = `${andyPercent}%`;
             document.getElementById('jianingProgress').style.width = `${jianingPercent}%`;
@@ -433,37 +455,50 @@
         }
 
         // 提交投票原因
-        function submitVoteReason() {
+        async function submitVoteReason() {
             const reason = document.getElementById('reasonText').value;
             if (!reason) {
                 alert('請填寫支持原因');
                 return;
             }
 
-            const person = localStorage.getItem('votedPerson');
-            const comments = JSON.parse(localStorage.getItem('voteComments')) || [];
-            comments.push({
-                person,
-                reason,
-                timestamp: new Date().toISOString()
-            });
+            try {
+                const response = await fetch('/api/comment', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ comment: reason })
+                });
 
-            localStorage.setItem('voteComments', JSON.stringify(comments));
-            voteReason.style.display = 'none';
-            renderVoteComments();
+                if (response.ok) {
+                    voteReason.style.display = 'none';
+                    await loadComments();
+                }
+            } catch (error) {
+                console.error('提交評論失敗:', error);
+                alert('提交評論失敗，請稍後再試');
+            }
+        }
+
+        // 加載評論
+        async function loadComments() {
+            try {
+                const response = await fetch('/api/comments');
+                const comments = await response.json();
+                renderVoteComments(comments);
+            } catch (error) {
+                console.error('加載評論失敗:', error);
+            }
         }
 
         // 渲染投票評論
-        function renderVoteComments() {
-            const comments = JSON.parse(localStorage.getItem('voteComments')) || [];
+        function renderVoteComments(comments) {
             voteComments.innerHTML = '';
 
             comments.forEach(comment => {
                 const div = document.createElement('div');
                 div.className = 'vote-comment';
                 div.innerHTML = `
-                    <strong>支持${comment.person === 'andy' ? 'Andy' : '家寧'}</strong>
-                    <p>${comment.reason}</p>
+                    <p>${comment.comment}</p>
                     <small>${new Date(comment.timestamp).toLocaleString()}</small>
                 `;
                 voteComments.appendChild(div);
@@ -494,12 +529,7 @@
             window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
         }
 
-        // 從localStorage加載數據
-        function loadFromLocalStorage() {
-            hasVoted = localStorage.getItem('hasVoted') === 'true';
-            supportData = JSON.parse(localStorage.getItem('supportData')) || { andy: 0, jianing: 0 };
-            updateVoteDisplay();
-        }
+
     </script>
 </body>
 </html>
