--- a/index.html
+++ b/index.html
@@ -299,16 +299,6 @@
     </div>
 
     <script>
-        // 事件數據
-        const events = [
-            { date: '2024-10-01', desc: 'Andy 發布11分鐘爆料影片，指控家寧奪權' },
-            { date: '2024-10-04', desc: '家寧回應，否認指控並稱有合約證據' },
-            { date: '2024-10-05', desc: '家寧哥哥雞肉攤頂讓，網友質疑轉移焦點' },
-            { date: '2025-03-14', desc: '家寧和母親正式回應，公開部分合約細節' },
-            { date: '2025-03-14', desc: 'Andy直播反駁，稱將公開更多證據' },
-            { date: '2025-03-15', desc: '網友爆料家寧疑似準備推出新頻道' }
-        ];
-
         // DOM元素
         const timelineDiv = document.getElementById('timeline');
         const analysisDiv = document.getElementById('analysis');
@@ -322,6 +312,7 @@
             try {
                 // 從後端加載數據
                 await Promise.all([
+                    loadEvents(),
                     loadVoteData(),
                     loadComments()
                 ]);
@@ -349,13 +340,21 @@
             form.style.display = form.style.display === 'none' ? 'block' : 'none';
         }
 
-        // 渲染時間軸
-        function renderTimeline() {
-            timelineDiv.innerHTML = '';
-            const allEvents = [...events, ...getCustomEvents()];
-            allEvents.sort((a, b) => new Date(a.date) - new Date(b.date));
+        // 加載事件數據
+        async function loadEvents() {
+            try {
+                const response = await fetch('/api/events');
+                const events = await response.json();
+                renderTimeline(events);
+            } catch (error) {
+                console.error('加載事件數據失敗:', error);
+            }
+        }
 
-            allEvents.forEach(event => {
+        // 渲染時間軸
+        function renderTimeline(events = []) {
+            timelineDiv.innerHTML = '';
+            events.forEach(event => {
                 const item = document.createElement('div');
                 item.className = 'timeline-item';
                 item.innerHTML = `
@@ -368,39 +367,69 @@
 
         // 渲染分析內容
         function renderAnalysis() {
-            analysisDiv.textContent = '雙方目前焦點在Andy和家寧的爭議中，Andy強調受害者身份，家寧稱有法律依據，事件真相待證實。';
+            analysisDiv.textContent = '雙方各執一詞，Andy強調受害者身份，家寧稱有法律依據，事件真相待證實。';
         }
 
         // 處理真相提交
-        truthForm.onsubmit = function(e) {
+        truthForm.onsubmit = async function(e) {
             e.preventDefault();
             const date = document.getElementById('eventDate').value;
-            const desc = document.getElementById('eventDesc').value;
+            const event = document.getElementById('eventDesc').value;
 
-            if (!date || !desc) {
+            if (!date || !event) {
                 alert('請填寫完整資訊');
                 return;
             }
 
-            // 保存到localStorage
-            const customEvents = getCustomEvents();
-            customEvents.push({ date, desc });
-            localStorage.setItem('customEvents', JSON.stringify(customEvents));
+            try {
+                const response = await fetch('/api/event', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ date, event })
+                });
 
-            // 更新顯示
-            renderTimeline();
-            truthForm.reset();
-            truthForm.style.display = 'none';
+                if (response.ok) {
+                    const events = await response.json();
+                    renderTimeline(events);
+                    truthForm.reset();
+                    truthForm.style.display = 'none';
+                    showNotification('真相提交成功！');
+                }
+            } catch (error) {
+                console.error('提交真相失敗:', error);
+                alert('提交失敗，請稍後再試');
+            }
         };
 
-        // 從localStorage獲取自定義事件
-        function getCustomEvents() {
-            const stored = localStorage.getItem('customEvents');
-            return stored ? JSON.parse(stored) : [];
+        // 顯示通知
+        function showNotification(message) {
+            const notification = document.createElement('div');
+            notification.style.cssText = `
+                position: fixed;
+                top: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+                background: #4CAF50;
+                color: white;
+                padding: 15px 30px;
+                border-radius: 5px;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+                opacity: 0;
+                transition: opacity 0.3s ease;
+            `;
+            notification.textContent = message;
+            document.body.appendChild(notification);
+
+            // 淡入
+            setTimeout(() => notification.style.opacity = '1', 10);
+            // 淡出並移除
+            setTimeout(() => {
+                notification.style.opacity = '0';
+                setTimeout(() => notification.remove(), 300);
+            }, 2000);
         }
 
         // 支持投票相關變數
-        let hasVoted = false;
         let supportData = { Andy: 0, '家寧': 0 };
 
         // 從後端加載投票數據
@@ -417,8 +446,6 @@
 
         // 支持按鈕點擊處理
         async function support(person) {
-            if (hasVoted) return;
-
             try {
                 const response = await fetch('/api/vote', {
                     method: 'POST',
@@ -427,10 +454,10 @@
                 });
 
                 if (response.ok) {
-                    hasVoted = true;
                     voteReason.style.display = 'block';
                     voteReason.dataset.votedPerson = person;
                     await loadVoteData();
+                    showNotification('投票成功！');
                 }
             } catch (error) {
                 console.error('投票失敗:', error);
@@ -444,14 +471,22 @@
             const andyPercent = total ? Math.round(supportData.Andy / total * 100) : 0;
             const jianingPercent = total ? Math.round(supportData['家寧'] / total * 100) : 0;
 
-            document.getElementById('andyProgress').style.width = `${andyPercent}%`;
-            document.getElementById('jianingProgress').style.width = `${jianingPercent}%`;
-            document.getElementById('votePercentages').textContent = 
-                `Andy: ${andyPercent}% | 家寧: ${jianingPercent}%`;
+            // 更新進度條
+            const andyProgress = document.getElementById('andyProgress');
+            const jianingProgress = document.getElementById('jianingProgress');
+            andyProgress.style.width = `${andyPercent}%`;
+            jianingProgress.style.width = `${jianingPercent}%`;
 
-            // 更新按鈕狀態
-            document.getElementById('andyButton').disabled = hasVoted;
-            document.getElementById('jianingButton').disabled = hasVoted;
+            // 更新百分比文字
+            document.getElementById('votePercentages').innerHTML = `
+                <div style="margin: 10px 0">
+                    <span style="color: #4A90E2">Andy: ${andyPercent}%</span> | 
+                    <span style="color: #FF6B6B">家寧: ${jianingPercent}%</span>
+                    <div style="font-size: 0.8em; color: #666; margin-top: 5px">
+                        總票數: ${total}
+                    </div>
+                </div>
+            `;
         }
 
         // 提交投票原因
