--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
         // 初始化頁面內容
         function initializePage() {
-            renderTimeline();
+            // 不需要在這裡調用 renderTimeline，因為 loadEvents 已經調用了
             renderAnalysis();
         }
 
